write logs, get logs, cancel tasks
